add thousand game

--- a/points/src/app/modules/games/round/round-t-wrapper/round-t-wrapper.component.html
+++ b/points/src/app/modules/games/round/round-t-wrapper/round-t-wrapper.component.html
@@ -13,7 +13,7 @@
     <ion-card-title class="ion-text-center">
       <ion-row>
         <ion-col *ngFor="let player of (players$ | async)">
-          {{player.name}}
+         <ion-text>{{player.name}}</ion-text>
         </ion-col>
         <ion-col size="1"></ion-col>
 
