--- a/points/src/app/modules/games/game/game.page.html
+++ b/points/src/app/modules/games/game/game.page.html
@@ -23,7 +23,7 @@
           <ion-card-content>
             <ion-list>
               <ion-item *ngFor="let player of playersWithTotal" (click)="selectPlayer(player._id)"
-                [ngClass]="{'active-player': player._id === (activePlayerId$ | async)}">
+                [ngClass]="{'active-player': player._id === (activePlayerId$ | async) && gameType !== 'thousand'}">
                 <ion-label [ngStyle]="{
                   'border-left': '6px solid ' + player.color,
                   'padding-left': '10px'
@@ -56,7 +56,7 @@
       </ion-col>
     </ion-row>
     <ion-row *ngIf="(activeRoundId$ | async) === 'start' || ((activeRoundId$ | async) && (activePlayerId$ | async))">
-      <ion-col size-lg="6" size-md="8" size-sm="10" offset-lg="3" offset-md="2" offset-sm="1">
+      <ion-col size-lg="8" size-md="10" size-sm="12" offset-lg="2" offset-md="1" offset-sm="0">
         <app-round [activeRoundId$]="activeRoundId$" [activePlayerId$]="activePlayerId$" [gameType$]="gameType$"
           [players$]="players$"></app-round>
       </ion-col>
