--- a/points/src/styles.scss
+++ b/points/src/styles.scss
@@ -1,11 +1,30 @@
+/* Input hide arrows Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Input hide arrows  Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 .bold {
   font-weight: 700;
 }
+
 .active-link {
   border-left: 8px solid var(--ion-color-secondary);
 }
 
-.progress-wrapper {
+.active-item {
+  height: 4px;
+  background-color: var(--ion-color-success);
+}
+
+.progress-wrapper,
+.regular-item {
   height: 4px;
 }
 
@@ -136,5 +155,32 @@
     justify-content: center;
     align-items: center;
     padding: 0 10px;
+  }
+}
+
+.thousand_score {
+    font-size: .8rem;
+}
+
+.thousand-score-input {
+  padding: 0 16px;
+}
+
+.thousand_total {
+  font-weight: 600;
+  font-size: 1.1rem;
+  &_last {
+    font-size: 1.3rem;
+  }
+}
+
+.round-btn-block {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  padding: 0 5px;
+  &__item {
+      flex: 1 1 auto;
+
   }
 }
