--- a/points/src/app/modules/analytics-tab/analytics-tab.page.html
+++ b/points/src/app/modules/analytics-tab/analytics-tab.page.html
@@ -8,15 +8,22 @@
     </ion-toolbar>
   </ion-header>
   <ion-content>
+
     <ion-list lines="none">
       <ion-menu-toggle auto-hide="false" menu="analytics-menu">
-        <ion-item routerLink="/analytics/train" routerLinkActive="active-link"
-          [routerLinkActiveOptions]="{exact: true}">
+        <ion-item
+          routerLink="/analytics/train"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{exact: true}"
+        >
           <ion-icon name="train-outline" slot="start"></ion-icon>
           <ion-label>{{'games.train.title' | translate}}</ion-label>
         </ion-item>
-        <ion-item routerLink="/analytics/rummy" routerLinkActive="active-link"
-          [routerLinkActiveOptions]="{exact: true}">
+        <ion-item
+          routerLink="/analytics/rummy"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{exact: true}"
+        >
           <ion-icon name="journal-outline" slot="start"></ion-icon>
           <ion-label>{{'games.rummy.title' | translate}}</ion-label>
         </ion-item>
@@ -30,12 +37,15 @@
           <ion-icon name="exit" slot="start"></ion-icon>
           <ion-label>{{'modules.user.logout' | translate}}</ion-label>
         </ion-item>
-        <ion-item *ngIf="(userRole$ | async) === 'guest'" routerLink="/auth/signin" routerLinkActive="active-link"
-          [routerLinkActiveOptions]="{exact: true}">
+        <ion-item
+          *ngIf="(userRole$ | async) === 'guest'"
+          routerLink="/auth/signin"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{exact: true}"
+        >
           <ion-icon name="log-in" slot="start"></ion-icon>
           <ion-label>{{'modules.user.signin' | translate}}</ion-label>
         </ion-item>
-
       </ion-menu-toggle>
     </ion-list>
   </ion-content>
