upgrade telegram messaging

--- a/points/src/app/modules/games/game/game.page.html
+++ b/points/src/app/modules/games/game/game.page.html
@@ -27,7 +27,7 @@
         <ion-card *ngIf="(rounds$ | async).length !== 0">
           <ion-card-header>
             <ion-card-title class="ion-text-center"
-              >{{'games.' + gameType + '.title' | translate}}</ion-card-title
+              >{{'games.' + gameType + '.name' | translate}}</ion-card-title
             >
           </ion-card-header>
           <ion-card-content>
