--- a/points/src/app/tabs/tabs.page.html
+++ b/points/src/app/tabs/tabs.page.html
@@ -6,15 +6,15 @@
   <ion-tab-bar slot="start">
     <ion-tab-button tab="games">
       <ion-icon name="game-controller"></ion-icon>
-      <ion-label>{{'modules.games.title' | translate}}</ion-label>
+      <ion-label>{{'modules.games.name' | translate}}</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="analytics">
       <ion-icon name="analytics-outline"></ion-icon>
-      <ion-label>{{'modules.analytics.title' | translate}}</ion-label>
+      <ion-label>{{'modules.analytics.name' | translate}}</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="auth">
       <ion-icon name="settings-outline"></ion-icon>
-      <ion-label>{{'modules.settings.title' | translate}}</ion-label>
+      <ion-label>{{'modules.settings.name' | translate}}</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
