--- a/points/src/app/modules/analytics-tab/analytics-tab.page.html
+++ b/points/src/app/modules/analytics-tab/analytics-tab.page.html
@@ -16,7 +16,7 @@
           [routerLinkActiveOptions]="{exact: true}"
         >
           <ion-icon name="train-outline" slot="start"></ion-icon>
-          <ion-label>{{'games.train.title' | translate}}</ion-label>
+          <ion-label>{{'games.train.name' | translate}}</ion-label>
         </ion-item>
 
         <ion-item
@@ -25,7 +25,7 @@
           [routerLinkActiveOptions]="{exact: true}"
         >
           <ion-icon name="journal-outline" slot="start"></ion-icon>
-          <ion-label>{{'games.rummy.title' | translate}}</ion-label>
+          <ion-label>{{'games.rummy.name' | translate}}</ion-label>
 
         </ion-item>
                 <ion-item
@@ -34,7 +34,7 @@
           [routerLinkActiveOptions]="{exact: true}"
         >
           <ion-icon name="journal-outline" slot="start"></ion-icon>
-          <ion-label>{{'games.thousand.title' | translate}}</ion-label>
+          <ion-label>{{'games.thousand.name' | translate}}</ion-label>
         </ion-item>
 
         <ion-item-divider></ion-item-divider>
