--- a/points/src/app/modules/analytics-tab/stat/stat-wrapper/stat-wrapper.component.html
+++ b/points/src/app/modules/analytics-tab/stat/stat-wrapper/stat-wrapper.component.html
@@ -1,7 +1,7 @@
 
 <ion-card>
   <ion-card-header>
-    <ion-card-title class="ion-text-center">{{ 'games.' + gameType + '.title' | translate }}</ion-card-title>
+    <ion-card-title class="ion-text-center">{{ 'games.' + gameType + '.name' | translate }}</ion-card-title>
     <ion-card-subtitle class="ion-text-center"
       >{{ ('modules.analytics.' + stat?.name) | translate }}
     </ion-card-subtitle>
