--- a/points/src/app/modules/games/games.page.html
+++ b/points/src/app/modules/games/games.page.html
@@ -12,19 +12,19 @@
       <ion-menu-toggle auto-hide="false" menu="games-menu">
         <ion-item routerLink="/games/train" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
           <ion-icon name="train-outline" slot="start"></ion-icon>
-          <ion-label>{{'games.train.title' | translate}}</ion-label>
+          <ion-label>{{'games.train.name' | translate}}</ion-label>
         </ion-item>
         <ion-item routerLink="/games/rummy" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
           <ion-icon name="journal-outline" slot="start"></ion-icon>
-          <ion-label>{{'games.rummy.title' | translate}}</ion-label>
+          <ion-label>{{'games.rummy.name' | translate}}</ion-label>
         </ion-item>
         <ion-item routerLink="/games/uno" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
           <ion-icon name="invert-mode-outline" slot="start"></ion-icon>
-          <ion-label>{{'games.uno.title' | translate}}</ion-label>
+          <ion-label>{{'games.uno.name' | translate}}</ion-label>
         </ion-item>
         <ion-item routerLink="/games/thousand" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
           <ion-icon name="layers-outline" slot="start"></ion-icon>
-          <ion-label>{{'games.thousand.title' | translate}}</ion-label>
+          <ion-label>{{'games.thousand.name' | translate}}</ion-label>
         </ion-item>
         <ion-item-divider></ion-item-divider>
         <ion-item button (click)="switchLanguage()">
