--- a/points/src/app/modules/games/game/game-result/game-result.component.html
+++ b/points/src/app/modules/games/game/game-result/game-result.component.html
@@ -6,7 +6,8 @@
 <ion-content class="ion-padding">
   <ion-grid class="ion-no-margin ion-no-padding">
     <ion-row>
-      <ion-col size-lg="6" size-md="8" size-sm="10" offset-lg="3" offset-md="2" offset-sm="1">
+      <ion-col>
+      <!-- <ion-col size-lg="6" size-md="8" size-sm="10" offset-lg="3" offset-md="2" offset-sm="1"> -->
         <ion-card>
           <ion-card-content>
             <ion-item lines="none">
