--- a/points/src/app/modules/games/game/game.page.html
+++ b/points/src/app/modules/games/game/game.page.html
@@ -23,7 +23,14 @@
 <ion-content>
   <ion-grid class="ion-no-margin ion-no-padding">
     <ion-row>
-      <ion-col size-lg="6" size-md="8" size-sm="10" offset-lg="3" offset-md="2" offset-sm="1">
+      <ion-col
+        size-lg="6"
+        size-md="8"
+        size-sm="10"
+        offset-lg="3"
+        offset-md="2"
+        offset-sm="1"
+      >
         <ion-card *ngIf="(rounds$ | async).length !== 0">
           <ion-card-header>
             <ion-card-title class="ion-text-center"
@@ -68,11 +75,13 @@
                 {{'elements.button.finishGame' | translate}}
               </ion-button>
               <ion-button
+                id="open-modal"
                 fill="outline"
                 size="small"
                 [disabled]="(rounds$ | async).length === 0 || (loading$ | async)"
-                (click)="onCancelGameHandler()"
               >
+                <!-- (click)="onCancelGameHandler()" -->
+
                 {{'elements.button.cancelGame' | translate}}
               </ion-button>
               <ion-button
@@ -88,10 +97,18 @@
         </ion-card>
       </ion-col>
     </ion-row>
+
     <ion-row
       *ngIf="(activeRoundId$ | async) === 'start' || ((activeRoundId$ | async) && (activePlayerId$ | async))"
     >
-      <ion-col size-lg="8" size-md="10" size-sm="12" offset-lg="2" offset-md="1" offset-sm="0">
+      <ion-col
+        size-lg="8"
+        size-md="10"
+        size-sm="12"
+        offset-lg="2"
+        offset-md="1"
+        offset-sm="0"
+      >
         <app-round
           [activeRoundId$]="activeRoundId$"
           [activePlayerId$]="activePlayerId$"
@@ -101,4 +118,59 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <ion-modal #modal trigger="open-modal">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>{{'elements.button.cancelGame' | translate}}?</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="modal.dismiss()">{{'elements.button.close' | translate}}</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <div class="finish-game-modal">
+          <div class="finish-game-modal__text">
+            <p class="ion-padding-horizontal">{{'common.cancelGameQuestion' | translate}}</p>
+          </div>
+          <div class="finish-game-modal__buttons">
+            <ion-grid>
+              <ion-row>
+                <ion-col size="7">
+                  <ion-button (click)="cancel()" expand="block"
+                    >{{'elements.button.cancel' | translate}}</ion-button
+                  >
+                </ion-col>
+                <ion-col size="5">
+                  <ion-button (click)="confirm()" fill="outline" expand="block"
+                    >{{'elements.button.confirm' | translate}}</ion-button
+                  ></ion-col
+                >
+              </ion-row>
+            </ion-grid>
+          </div>
+        </div>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+
+  <!-- <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-buttons slot="start">
+            <ion-button (click)="cancel()">Cancel</ion-button>
+          </ion-buttons>
+          <ion-title>Cancel game?</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+
+      </ion-content>
+    </ng-template>
+  </ion-modal> -->
 </ion-content>
