--- a/points/src/styles.scss
+++ b/points/src/styles.scss
@@ -14,6 +14,10 @@ input[type='number'] {
   font-weight: 700;
 }
 
+.height100 {
+  height: 100%;
+}
+
 .active-link {
   border-left: 8px solid var(--ion-color-secondary);
 }
@@ -71,7 +75,7 @@ input[type='number'] {
   &__item {
     margin: 0 8px;
     &_name {
-      flex: 1 1 100%
+      flex: 1 1 100%;
     }
     &_btn {
     }
@@ -211,5 +215,23 @@ input[type='number'] {
   padding: 0 5px;
   &__item {
     // flex: 1 1 auto;
+  }
+}
+
+.finish-game-modal {
+  display: flex;
+  height: 100%;
+  align-items: stretch;
+  flex-direction: column;
+  &__text {
+    display: flex;
+    flex: 1 1 auto;
+    align-items: center;
+    justify-content: center;
+  }
+  &__buttons {
+    display: flex;
+    flex: 1 1 auto;
+    align-items: center;
   }
 }
