--- a/points/src/app/modules/games/game/game.page.html
+++ b/points/src/app/modules/games/game/game.page.html
@@ -139,12 +139,12 @@
               <ion-row>
                 <ion-col size="7">
                   <ion-button (click)="cancel()" expand="block"
-                    >{{'elements.button.cancel' | translate}}</ion-button
+                    >{{'elements.button.returnToGame' | translate}}</ion-button
                   >
                 </ion-col>
                 <ion-col size="5">
                   <ion-button (click)="confirm()" fill="outline" expand="block"
-                    >{{'elements.button.confirm' | translate}}</ion-button
+                    >{{'elements.button.cancelGame' | translate}}</ion-button
                   ></ion-col
                 >
               </ion-row>
