--- a/points/src/app/modules/games/game/game.page.html
+++ b/points/src/app/modules/games/game/game.page.html
@@ -75,13 +75,11 @@
                 {{'elements.button.finishGame' | translate}}
               </ion-button>
               <ion-button
-                id="open-modal"
                 fill="outline"
                 size="small"
                 [disabled]="(rounds$ | async).length === 0 || (loading$ | async)"
+                (click)="onCancelGameHandler()"
               >
-                <!-- (click)="onCancelGameHandler()" -->
-
                 {{'elements.button.cancelGame' | translate}}
               </ion-button>
               <ion-button
@@ -118,42 +116,6 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
-  <ion-modal #modal trigger="open-modal">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>{{'elements.button.cancelGame' | translate}}?</ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="modal.dismiss()">{{'elements.button.close' | translate}}</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <div class="finish-game-modal">
-          <div class="finish-game-modal__text">
-            <p class="ion-padding-horizontal">{{'common.cancelGameQuestion' | translate}}</p>
-          </div>
-          <div class="finish-game-modal__buttons">
-            <ion-grid>
-              <ion-row>
-                <ion-col size="7">
-                  <ion-button (click)="cancel()" expand="block"
-                    >{{'elements.button.returnToGame' | translate}}</ion-button
-                  >
-                </ion-col>
-                <ion-col size="5">
-                  <ion-button (click)="confirm()" fill="outline" expand="block"
-                    >{{'elements.button.cancelGame' | translate}}</ion-button
-                  ></ion-col
-                >
-              </ion-row>
-            </ion-grid>
-          </div>
-        </div>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
 
   <!-- <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
     <ng-template>
