--- a/points/src/app/modules/games/games.page.html
+++ b/points/src/app/modules/games/games.page.html
@@ -2,7 +2,9 @@
   <ion-header>
     <ion-toolbar color="secondary">
       <ion-title>
-        <h2 *ngIf="(userRole$ | async) === 'member' || (userRole$ | async) === 'admin'">{{(user$ | async).name }}</h2>
+        <h2 *ngIf="(userRole$ | async) === 'member' || (userRole$ | async) === 'admin'">
+          {{(user$ | async).name }}
+        </h2>
         <h2 *ngIf="(userRole$ | async) === 'guest'">Guest</h2>
       </ion-title>
     </ion-toolbar>
@@ -10,19 +12,35 @@
   <ion-content>
     <ion-list lines="none">
       <ion-menu-toggle auto-hide="false" menu="games-menu">
-        <ion-item routerLink="/games/train" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+        <ion-item
+          routerLink="/games/train"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{exact: true}"
+        >
           <ion-icon name="train-outline" slot="start"></ion-icon>
           <ion-label>{{'games.train.name' | translate}}</ion-label>
         </ion-item>
-        <ion-item routerLink="/games/rummy" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+        <ion-item
+          routerLink="/games/rummy"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{exact: true}"
+        >
           <ion-icon name="journal-outline" slot="start"></ion-icon>
           <ion-label>{{'games.rummy.name' | translate}}</ion-label>
         </ion-item>
-        <ion-item routerLink="/games/uno" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+        <ion-item
+          routerLink="/games/uno"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{exact: true}"
+        >
           <ion-icon name="invert-mode-outline" slot="start"></ion-icon>
           <ion-label>{{'games.uno.name' | translate}}</ion-label>
         </ion-item>
-        <ion-item routerLink="/games/thousand" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+        <ion-item
+          routerLink="/games/thousand"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{exact: true}"
+        >
           <ion-icon name="layers-outline" slot="start"></ion-icon>
           <ion-label>{{'games.thousand.name' | translate}}</ion-label>
         </ion-item>
@@ -31,12 +49,20 @@
           <ion-icon name="earth-outline" slot="start"></ion-icon>
           <ion-label>{{'language' | translate}}</ion-label>
         </ion-item>
-        <ion-item *ngIf="(userRole$ | async) === 'member' || (userRole$ | async) === 'admin'" button (click)="onLogout()">
+        <ion-item
+          *ngIf="(userRole$ | async) === 'member' || (userRole$ | async) === 'admin'"
+          button
+          (click)="onLogout()"
+        >
           <ion-icon name="exit" slot="start"></ion-icon>
           <ion-label>{{'modules.user.logout' | translate}}</ion-label>
         </ion-item>
-        <ion-item *ngIf="(userRole$ | async) === 'guest'" routerLink="/auth/signin" routerLinkActive="active-link"
-          [routerLinkActiveOptions]="{exact: true}">
+        <ion-item
+          *ngIf="(userRole$ | async) === 'guest'"
+          routerLink="/auth/signin"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{exact: true}"
+        >
           <ion-icon name="log-in" slot="start"></ion-icon>
           <ion-label>{{'modules.user.signin' | translate}}</ion-label>
         </ion-item>
