--- a/points/src/app/modules/games/games-list/games-list.page.html
+++ b/points/src/app/modules/games/games-list/games-list.page.html
@@ -13,15 +13,13 @@
       <ion-col
         size-lg="4"
         size-md="6"
-        size-sm="8"
-        size-xs="10"
+        size-sm="10"
         offset-lg="4"
         offset-md="3"
-        offset-sm="2"
-        offset-xs="1"
+        offset-sm="1"
       >
         <ion-card *ngFor="let game of gameTypes; let i = index">
-          <img [alt]="'Game ' + game" [src]="'https://picsum.photos/id/' + (i + 20 )+ '/1024/512'" />
+          <img [alt]="'Game ' + game" [src]="'https://picsum.photos/id/' + (i + rand )+ '/512/256'" />
           <ion-card-header>
             <ion-card-title>{{'games.' + game + '.name' | translate}}</ion-card-title>
             <ion-card-subtitle>
