add color theme toggle

--- a/points/src/global.scss
+++ b/points/src/global.scss
@@ -41,3 +41,8 @@
 //   inset: initial;
 //   color: initial;
 // }
+
+/* This is added for the flashing that happens when toggling between themes */
+ion-item {
+  --transition: none;
+}
