--- a/points/src/app/modules/auth/profile/profile.page.html
+++ b/points/src/app/modules/auth/profile/profile.page.html
@@ -2,7 +2,9 @@
   <ion-header>
     <ion-toolbar color="secondary">
       <ion-title>
-        <h2 *ngIf="(userRole$ | async) === 'member' || (userRole$ | async) === 'admin'">{{(user$ | async).name }}</h2>
+        <h2 *ngIf="(userRole$ | async) === 'member' || (userRole$ | async) === 'admin'">
+          {{(user$ | async).name }}
+        </h2>
         <h2 *ngIf="(userRole$ | async) === 'guest'">Guest</h2>
       </ion-title>
     </ion-toolbar>
@@ -10,6 +12,14 @@
   <ion-content>
     <ion-list lines="none">
       <ion-menu-toggle auto-hide="false" menu="profile-menu">
+        <!-- <ion-item>
+          <ion-toggle
+            [(ngModel)]="themeToggle"
+            (ionChange)="$event.stopPropagation();$event.preventDefault();toggleChange($event)"
+            justify="space-between"
+            >Dark Mode</ion-toggle
+          >
+        </ion-item> -->
         <ion-item
           routerLink="/auth/profile/telegram"
           routerLinkActive="active-link"
@@ -18,7 +28,8 @@
           <ion-icon name="send-outline" slot="start"></ion-icon>
           <ion-label>{{'modules.profile.telegramSetup' | translate}}</ion-label>
         </ion-item>
-        <ion-item *ngIf="(userRole$ | async) === 'admin'"
+        <ion-item
+          *ngIf="(userRole$ | async) === 'admin'"
           routerLink="/auth/profile/error-log"
           routerLinkActive="active-link"
           [routerLinkActiveOptions]="{exact: true}"
@@ -28,11 +39,19 @@
         </ion-item>
         <ion-item-divider></ion-item-divider>
 
+        <ion-item button (click)="toggleDarkTheme()">
+          <ion-icon name="color-palette-outline" slot="start"></ion-icon>
+          <ion-label>{{(isDark ? 'modules.settings.switchToLight' : 'modules.settings.switchToDark') | translate}}</ion-label>
+        </ion-item>
         <ion-item button (click)="switchLanguage()">
           <ion-icon name="earth-outline" slot="start"></ion-icon>
           <ion-label>{{'language' | translate}}</ion-label>
         </ion-item>
-        <ion-item *ngIf="(userRole$ | async) === 'member' || (userRole$ | async) === 'admin'" button (click)="onLogout()">
+        <ion-item
+          *ngIf="(userRole$ | async) === 'member' || (userRole$ | async) === 'admin'"
+          button
+          (click)="onLogout()"
+        >
           <ion-icon name="exit" slot="start"></ion-icon>
           <ion-label>{{'modules.user.logout' | translate}}</ion-label>
         </ion-item>
