--- a/points/src/app/modules/games/round/train/round-cars/round-cars.component.html
+++ b/points/src/app/modules/games/round/train/round-cars/round-cars.component.html
@@ -5,14 +5,14 @@
     </ion-col>
     <ion-col class="round_tools__btn">
       <div class="incDecBtn">
-        <ion-button shape="round" color="danger" fill="outline" (click)="removeFromScoresLine(car.value)">
+        <ion-button shape="round" color="danger" (click)="removeFromScoresLine(car.value)">
           <ion-icon name="remove-outline"></ion-icon>
         </ion-button>
         <span class="incDecBtn__caption">
-          <ion-icon name="train-outline"></ion-icon>
-          {{car.name}}
+          <ion-icon size="large" name="train-outline"></ion-icon>
+          <ion-text>{{car.name}}</ion-text>
         </span>
-        <ion-button shape="round" color="success" fill="outline" (click)="addToScoresLine(car.value)">
+        <ion-button shape="round" color="success" (click)="addToScoresLine(car.value)">
           <ion-icon name="add-outline"></ion-icon>
         </ion-button>
       </div>
