--- a/points/src/app/modules/games/round/train/round-routes/round-routes.component.html
+++ b/points/src/app/modules/games/round/train/round-routes/round-routes.component.html
@@ -1,25 +1,25 @@
 <ion-card-content>
   <ion-row class="round round_tools">
     <ion-col *ngFor="let routeScore of routesScoresEnv" size="3">
-      <ion-chip [color]="routeScore.value > 19 ? 'secondary' : 'warning'"
+      <ion-button expand="block" [color]="routeScore.value > 19 ? 'darkblue' : 'midblue'"
         (click)="addToNamedScoresLine({value: routeScore.value * inverse, name: (numberFn(routeScore.name) * inverse) + '' })">
-        <ion-label>{{routeScore.value * inverse}}</ion-label>
-      </ion-chip>
+        {{routeScore.value * inverse}}
+      </ion-button>
     </ion-col>
-    <ion-col size="3">
-      <ion-chip [color]="'danger'" (click)="inverseScore()">
+    <ion-col size="2" offset="1" >
+      <ion-button [color]="'danger'" expand="block" (click)="inverseScore()">
         <ion-icon name="add-outline"></ion-icon>
         <ion-icon name="remove-outline"></ion-icon>
-      </ion-chip>
+      </ion-button>
     </ion-col>
   </ion-row>
   <ion-row class="round round_result">
-    <ion-col *ngFor="let routeScore of getMemberByPlayerId().namedScoresLine" size="3">
-      <ion-chip outline [color]="routeScore.value > 19 ? 'secondary' : routeScore.value < 0 ? 'danger' : 'warning'"
+    <ion-col class="ion-text-center" *ngFor="let routeScore of getMemberByPlayerId().namedScoresLine" size="2">
+      <ion-button size="small" fill="outline" [color]="routeScore.value > 19 ? 'darkblue' : routeScore.value < 0 ? 'danger' : 'midblue'"
         (click)="removeFromNamedScoresLine({value: routeScore.value, name: routeScore.name})">
-        <ion-label>{{routeScore.value}}</ion-label>
-        <ion-icon name="close-circle"></ion-icon>
-      </ion-chip>
+        {{routeScore.value}}
+        <ion-icon  slot="end"  name="close-circle"></ion-icon>
+      </ion-button>
     </ion-col>
   </ion-row>
 </ion-card-content>
