--- a/points/src/app/modules/games/round/train/round-stations/round-stations.component.html
+++ b/points/src/app/modules/games/round/train/round-stations/round-stations.component.html
@@ -5,14 +5,14 @@
     </ion-col>
     <ion-col class="round_tools__btn">
       <div class="incDecBtn">
-        <ion-button shape="round" color="danger" fill="outline" (click)="addToScoresLine(4)"
+        <ion-button shape="round" color="danger" (click)="addToScoresLine(4)"
           [disabled]="getMemberByPlayerId().scoresLine.length >= 3">
           <ion-icon name="remove-outline"></ion-icon>
         </ion-button>
         <span class="incDecBtn__caption">
-          <div>{{'games.train.stationsShort' | translate}}</div>
+          <ion-text>{{'games.train.stationsShort' | translate}}</ion-text>
         </span>
-        <ion-button shape="round" color="success" fill="outline" (click)="removeFromScoresLine(4)"
+        <ion-button shape="round" color="success" (click)="removeFromScoresLine(4)"
           [disabled]="getMemberByPlayerId().scoresLine.length <= 0">
           <ion-icon name="add-outline"></ion-icon>
         </ion-button>
