--- a/points/src/styles.scss
+++ b/points/src/styles.scss
@@ -131,16 +131,36 @@ input[type='number'] {
   font-weight: 800;
 }
 
-.uno-round-img {
+.uno-img {
   padding: 0.25rem 0.5rem;
 }
+
+.uno-img:hover + .close-icon-popup {
+  opacity: 0.8;
+}
+
+.close-icon-popup:hover {
+  opacity: 0.8;
+}
+
+.close-icon-popup {
+  transition: opacity 0.5s ease-in;
+  opacity: 0;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  top: calc(50% - 32px);
+  right: calc(50% - 32px);
+  color: var(--ion-color-dark);
+}
+
 .round {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
   ion-chip {
-    flex: 1 1 25%;
+    // flex: 1 1 25%;
     display: flex;
     justify-content: center;
   }
@@ -162,8 +182,8 @@ input[type='number'] {
     }
   }
   &_result {
-    justify-content: space-around;
-    min-height: 40px;
+    justify-content: center;
+    min-height: 48px;
   }
 }
 
@@ -175,6 +195,9 @@ input[type='number'] {
     justify-content: center;
     align-items: center;
     padding: 0 10px;
+  }
+  &__caption ion-text {
+    font-size: 1.2rem;
   }
 }
 
