--- a/frontend_dist/styles.css
+++ b/frontend_dist/styles.css
@@ -1903,7 +1903,7 @@ input[type=number] {
 }
 .card__title {
   font-size: 2rem;
-  margin: 0 0 0 16px;
+  padding: 0 0 0 16px;
 }
 .card__description {
   margin-bottom: 16px;
