--- a/points/src/styles.scss
+++ b/points/src/styles.scss
@@ -284,12 +284,11 @@ input[type='number'] {
   }
   &__title {
     font-size: 2rem;
-    margin: 0 0 0 16px;
+    padding: 0 0 0 16px;
   }
   &__description {
     margin-bottom: 16px;
     text-align: justify;
-    // font-weight: 100;
     font-size: 13.5px;
     line-height: 1.3;
   }
@@ -299,7 +298,6 @@ input[type='number'] {
     justify-content: space-between;
     align-items: center;
   }
-
   &__btn {
     color: white;
     background-color: rgba(1, 1, 1, 0.3);
